<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.shahareldad.basecalc.basecalculator.MainCalculatorActivityFragment"
    tools:showIn="@layout/activity_main_calculator">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15px"
            android:text="@string/insert_number_title" />

        <EditText
            android:id="@+id/inputNumberEditText"
            android:layout_width="match_parent"
            android:imeOptions="actionGo"
            android:inputType="number"
            android:textAlignment="center"
            android:layout_height="80px"
            android:layout_marginBottom="15px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15px"
                android:text="@string/binary_base" />

            <EditText
                android:id="@+id/baseTwoEditText"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="80px"
                android:layout_marginBottom="15px"
                android:editable="false"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15px"
                android:text="@string/quaternary_base" />

            <EditText
                android:id="@+id/baseFourEditText"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="80px"
                android:layout_marginBottom="15px"
                android:editable="false" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15px"
                android:text="@string/octal_base" />

            <EditText
                android:id="@+id/baseEightEditText"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="80px"
                android:layout_marginBottom="15px"
                android:editable="false" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15px"
                android:text="@string/decimal_base" />

            <EditText
                android:id="@+id/baseTenEditText"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="80px"
                android:layout_marginBottom="15px"
                android:editable="false" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15px"
                android:text="@string/hexa_title" />

            <EditText
                android:id="@+id/baseSixteenEditText"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="80px"
                android:layout_marginBottom="15px"
                android:editable="false" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonCalculateBases"
            android:text="@string/calc_bases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">

        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</LinearLayout>
